--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -3,7 +3,7 @@
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Taco Cloud</title>
-	<link rel="stylesheet" th:href="@{/styles.css}" />
+	<link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
 <form method="POST" th:action="@{/orders}" th:object="${tacoOrder}">
@@ -30,15 +30,22 @@
 	<br/>
 	<label for="deliveryZip">Zip code: </label>
 	<input type="text" th:field="*{deliveryZip}"/>
-	<br/><h3>Here’s how I’ll pay...</h3>
+	<br/>
+	<h3>Here’s how I’ll pay...</h3>
 	<label for="ccNumber">Credit Card #: </label>
 	<input type="text" th:field="*{ccNumber}"/>
+	<span class="validationError"
+		  th:if="${#fields.hasErrors('ccNumber')}"
+		  th:errors="*{ccNumber}">CC Num Error</span>
 	<br/>
 	<label for="ccExpiration">Expiration: </label>
 	<input type="text" th:field="*{ccExpiration}"/>
 	<br/>
 	<label for="ccCVV">CVV: </label>
 	<input type="text" th:field="*{ccCVV}"/>
+	<span class="validationError"
+		  th:if="${#fields.hasErrors('ccCVV')}"
+		  th:errors="*{ccCVV}">Invalid CVV</span>
 	<br/>
 	<input type="submit" value="Submit Order"/>
 </form>
